k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-client
  namespace: ai-image-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-client
  template:
    metadata:
      labels:
        app: ai-client
    spec:
      containers:
        - name: ai-client
          image: burakkutluk/ai-client:latest
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: ai-client
  namespace: ai-image-generator
spec:
  selector:
    app: ai-client
  ports:
    - port: 80
      targetPort: 5173
