k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-ingress
  namespace: ai-image-generator
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ai.burakkutluk.com  # ← DNS'in buna yönlenmeli
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-client
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: ai-server
                port:
                  number: 80
